# School21

./: .gitattributes  README.md  all my tasks.txt
C_C++/C4_s21_math/: README.md  README_RUS.md
CareerTrack/CT00.ID_879021-1/: README_RUS.md
CareerTrack/CT01/: README.md
CareerTrack/CT01.ID_879027-1/: README_RUS.md
CareerTrack/CT02/: README.md  src.rar
CareerTrack/CT02.ID_886651-1/: README.md
CareerTrack/CT03/: README_RUS.md
CareerTrack/CT04/: README.md  README_RUS.md
CareerTrack/CT05/: README_RUS.md
CareerTrack/CT05.ID_888906-1/: README.md
CareerTrack/CT06/: README.md  README_RUS.md
CareerTrack/CT07/: README_RUS.md
CareerTrack/CT07.ID_888916-1/: README.md
CareerTrack/CT08/: README.md
D02_Linux/: README.md
DO1_Linux/: README.md
DataScience/DS2_Churn_prediction.ID_886381-1/: .gitattributes
DataScience/DS_Bootcamp.Day03/: README.md
DataScience/DS_Bootcamp.Day04/: README.md
DataScience/DS_Bootcamp.Day05-1/: README.md
DataScience/DS_Bootcamp.Day06-1/: README.md
DataScience/DS_Bootcamp.Day07-1/: README.md
DataScience/DS_Bootcamp.Day08/: README.md
DataScience/DS_Bootcamp.Day09/: README.md
DataScience/DS_Bootcamp.Team00-1/: README.md
DataScience/DS_Bootcamp.Team01/: README.md
DataScience/ML.Project_1/: README.md
DataScience/ML.Project_2/: README.md
Python/AP1_Py_P01.Team_Not_Mine/src/: Makefile  README.md  main.py  pyproject.toml
Python/AP1_Py_P01.Team_Not_Mine/src/Rogue_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python/AP1_Py_P01.Team_Not_Mine/src/controller/: controller.py  game_info.py
Python/AP1_Py_P01.Team_Not_Mine/src/controller/sound/: sound_controller.py
Python/AP1_Py_P01.Team_Not_Mine/src/datalayer/: stats.py
Python/AP1_Py_P01.Team_Not_Mine/src/domain/: __init__.py
Python/AP1_Py_P01.Team_Not_Mine/src/domain/map/: corridor.py  keys.py  level_map.py  room.py  settings.py
Python/AP1_Py_P01.Team_Not_Mine/src/domain/objects/: character.py  utils.py
Python/AP1_Py_P01.Team_Not_Mine/src/domain/objects/backpack/: backpack.py  item_list.py
Python/AP1_Py_P01.Team_Not_Mine/src/domain/objects/enemies/: __init__.py  enemy.py  ghost.py  mimic.py  ogre.py  snake_mage.py  vampire.py  zombie.py
Python/AP1_Py_P01.Team_Not_Mine/src/domain/objects/items/: __init__.py  food.py  gold.py  item.py  potion.py  scroll.py  weapon.py
Python/AP1_Py_P01.Team_Not_Mine/src/utils/: logger.py  utils.py
Python/AP1_Py_P01.Team_Not_Mine/src/view/: map_renderer.py  utils.py
project/: README.md
(+686 files in other folders)
